--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-4 col-5-large col-12-medium">
-							<span class="image fit"><img src="images\00.jpg" alt="" /></span>
+							<span class="image fit"><img src="images\00.jpg" alt="profile" width="500" height="600"/></span>
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
@@ -38,7 +38,9 @@
 							<p>As a <strong>motivated software engineer</strong>,
 								with a client-focused mindset, excellent communication skills, strong problem-solving abilities, and a commitment to continuous learning, 
 								I am eager to contribute to innovative projects and help the team achieve its goals.</p>
-							<a href="#work" class="button large scrolly">Learn about what I do</a>
+							<a href="https://github.com/hamdi-benali" class="button medium scrolly">Github</a>
+							<a href="https://www.linkedin.com/in/hamdi-benali/" class="button medium scrolly">Linkedin</a>
+
 						</div>
 					</div>
 				</div>
