--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 		<!-- Nav -->
 			<nav id="nav">
 				<ul class="container">
-					<li><a href="#top">Top</a></li>
-					<li><a href="#work">Work</a></li>
-					<li><a href="#portfolio">Portfolio</a></li>
+					<li><a href="#top">About</a></li>
+					<li><a href="#work">Services</a></li>
+					<li><a href="#portfolio">Projects</a></li>
 					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</nav>
@@ -50,15 +50,15 @@
 			<article id="work" class="wrapper style2">
 				<div class="container">
 					<header>
-						<h2>Here's all the stuff I do.</h2>
-						<p>Odio turpis amet sed consequat eget posuere consequat.</p>
+						<h2>Services</h2>
+						<p>Deliver faster, better products that your users will love. Here are the services I provide:</p>
 					</header>
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icon featured fa-comments"></span>
-								<h3>Consequat lorem</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<span class="icon featured fa-pencil"></span>
+								<h3>UX-UI Design</h3>
+								<p>creating a positive user experience that encourages customers to stick with a brand or product.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
@@ -77,7 +77,7 @@
 						</div>
 					</div>
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+						<p>“Programming isn’t about what you know; it’s about what you can figure out.” Chris Pine,</p>
 						<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
 					</footer>
 				</div>
