--- a/index.html
+++ b/index.html
@@ -56,30 +56,27 @@
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icon featured fa-pencil"></span>
 								<h3>UX-UI Design</h3>
-								<p>creating a positive user experience that encourages customers to stick with a brand or product.</p>
+								<p>Creates a positive user experience that encourages customers to stick with a brand or product.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icon solid featured fa-camera-retro"></span>
-								<h3>Lorem dolor tempus</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<h3>Front-end development</h3>
+								<p>Sets  up the project, uses front-end frameworks , builds responsive UI, creates reusable components, and integrates with back-end APIs for dynamic data display.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icon featured fa-thumbs-up"></span>
-								<h3>Feugiat posuere</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<h3>Back-end Development</h3>
+								<p>With a server-side language (PHP), creates RESTful APIs, designs the database (MySQL), and manages data, security, and scalability with authentication and validation.</p>
 							</section>
 						</div>
 					</div>
 					<footer>
 						<p>“Programming isn’t about what you know; it’s about what you can figure out.” Chris Pine,</p>
-						<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
-					</footer>
+<!-- 						<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
+ -->					</footer>
 				</div>
 			</article>
 
