--- a/index.html
+++ b/index.html
@@ -84,52 +84,49 @@
 			<article id="portfolio" class="wrapper style3">
 				<div class="container">
 					<header>
-						<h2>Here’s some stuff I made recently.</h2>
-						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p>
+						<h2>Projects</h2>
+						<p>Here’s some projects I made recently.</p>
 					</header>
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-								<h3><a href="#">Magna feugiat</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="#" class="image featured"><img src="" alt="" /></a>
+								<h3><a href="#">School management system</a></h3>
+								<p>Full-Stack Laravel</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<h3><a href="#">Veroeros primis</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="#" class="image featured"><img src="" alt="" /></a>
+								<h3><a href="#">School management system</a></h3>
+								<p>Full-Stack Laravel</p>
 							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
+						</div><div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								<h3><a href="#">Lorem ipsum</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="#" class="image featured"><img src="" alt="" /></a>
+								<h3><a href="#">School management system</a></h3>
+								<p>Full-Stack Laravel</p>
 							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
+						</div><div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-								<h3><a href="#">Tempus dolore</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="#" class="image featured"><img src="" alt="" /></a>
+								<h3><a href="#">School management system</a></h3>
+								<p>Full-Stack Laravel</p>
 							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
+						</div><div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-								<h3><a href="#">Feugiat aliquam</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="#" class="image featured"><img src="" alt="" /></a>
+								<h3><a href="#">School management system</a></h3>
+								<p>Full-Stack Laravel</p>
 							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
+						</div><div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-								<h3><a href="#">Sed amet ornare</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="#" class="image featured"><img src="" alt="" /></a>
+								<h3><a href="#">School management system</a></h3>
+								<p>Full-Stack Laravel</p>
 							</article>
 						</div>
+						
 					</div>
 					<footer>
 						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
