--- a/index.html
+++ b/index.html
@@ -91,38 +91,32 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="" alt="" /></a>
-								<h3><a href="#">School management system</a></h3>
+								<h3><a href="https://www.idees3d.fr">Idées 3D</a></h3>
 								<p>Full-Stack Laravel</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="" alt="" /></a>
-								<h3><a href="#">School management system</a></h3>
+								<h3><a href="https://www.fidclick.com/">Fidclick</a></h3>
 								<p>Full-Stack Laravel</p>
 							</article>
 						</div><div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="" alt="" /></a>
-								<h3><a href="#">School management system</a></h3>
+								<h3><a href="https://www.repfone.phonixphone.fr/">repfone</a></h3>
 								<p>Full-Stack Laravel</p>
 							</article>
 						</div><div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="" alt="" /></a>
-								<h3><a href="#">School management system</a></h3>
+								<h3><a href="#">RH management system</a></h3>
 								<p>Full-Stack Laravel</p>
 							</article>
 						</div><div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="" alt="" /></a>
-								<h3><a href="#">School management system</a></h3>
-								<p>Full-Stack Laravel</p>
-							</article>
-						</div><div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="" alt="" /></a>
-								<h3><a href="#">School management system</a></h3>
+								<h3><a href="#">E-commerce website</a></h3>
 								<p>Full-Stack Laravel</p>
 							</article>
 						</div>
