--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 						</div>
 					</div>
 					<footer>
-						<p>“Programming isn’t about what you know; it’s about what you can figure out.” Chris Pine,</p>
+						<p>"Programming isn’t about what you know; it’s about what you can figure out."</p>
 <!-- 						<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
  -->					</footer>
 				</div>
@@ -101,19 +101,29 @@
 								<h3><a href="https://www.fidclick.com/">Fidclick</a></h3>
 								<p>Full-Stack Laravel</p>
 							</article>
-						</div><div class="col-4 col-6-medium col-12-small">
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="" alt="" /></a>
 								<h3><a href="https://www.repfone.phonixphone.fr/">repfone</a></h3>
 								<p>Full-Stack Laravel</p>
 							</article>
-						</div><div class="col-4 col-6-medium col-12-small">
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="" alt="" /></a>
 								<h3><a href="#">RH management system</a></h3>
 								<p>Full-Stack Laravel</p>
 							</article>
-						</div><div class="col-4 col-6-medium col-12-small">
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="#" class="image featured"><img src="" alt="" /></a>
+								<h3><a href="#">RH management system</a></h3>
+								<p>Full-Stack Laravel</p>
+							</article>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="" alt="" /></a>
 								<h3><a href="#">E-commerce website</a></h3>
@@ -123,7 +133,7 @@
 						
 					</div>
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+						<p>"If, at first, you do not succeed, call it version 1.0."</p>
 						<a href="#contact" class="button large scrolly">Get in touch with me</a>
 					</footer>
 				</div>
