--- a/index.html
+++ b/index.html
@@ -134,7 +134,12 @@
 					</div>
 					<footer>
 						<p>"If, at first, you do not succeed, call it version 1.0."</p>
-						<a href="#contact" class="button large scrolly">Get in touch with me</a>
+						<a download="" href="assets\PDF\cv_hamdi_benali_fr_eng.pdf" class="button medium scrolly">
+							Download CV <i class="uil uil-download-alt button__icon"></i>
+						</a>
+						<a download="" href="assets\PDF\cv_hamdi_benali_fr_eng.pdf" class="button medium scrolly">
+							Download CV <i class="uil uil-download-alt button__icon"></i>
+						</a>
 					</footer>
 				</div>
 			</article>
