--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							<p>As a <strong>motivated software engineer</strong>,
 								with a client-focused mindset, excellent communication skills, strong problem-solving abilities, and a commitment to continuous learning, 
 								I am eager to contribute to innovative projects and help the team achieve its goals.</p>
-							<a href="https://github.com/hamdi-benali" class="button medium scrolly">Github</a>
+							<a href="https://www.github.com/hamdi-benali" class="button medium scrolly">Github</a>
 							<a href="https://www.linkedin.com/in/hamdi-benali/" class="button medium scrolly">Linkedin</a>
 
 						</div>
@@ -135,10 +135,10 @@
 					<footer>
 						<p>"If, at first, you do not succeed, call it version 1.0."</p>
 						<a download="" href="assets\PDF\cv_hamdi_benali_fr_eng.pdf" class="button medium scrolly">
-							Download CV <i class="uil uil-download-alt button__icon"></i>
+							Download CV (English) <i class="uil uil-download-alt button__icon"></i>
 						</a>
 						<a download="" href="assets\PDF\cv_hamdi_benali_fr_eng.pdf" class="button medium scrolly">
-							Download CV <i class="uil uil-download-alt button__icon"></i>
+							Download CV (French) <i class="uil uil-download-alt button__icon"></i>
 						</a>
 					</footer>
 				</div>
@@ -148,63 +148,27 @@
 			<article id="contact" class="wrapper style4">
 				<div class="container medium">
 					<header>
-						<h2>Have me make stuff for you.</h2>
-						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum.</p>
+						<h2>Get to know me</h2>
+						<p>Adress & Contact</p>
 					</header>
 					<div class="row">
 						<div class="col-12">
-							<form method="post" action="#">
-								<div class="row">
-									<div class="col-6 col-12-small">
-										<input type="text" name="name" id="name" placeholder="Name" />
-									</div>
-									<div class="col-6 col-12-small">
-										<input type="text" name="email" id="email" placeholder="Email" />
-									</div>
-									<div class="col-12">
-										<input type="text" name="subject" id="subject" placeholder="Subject" />
-									</div>
-									<div class="col-12">
-										<textarea name="message" id="message" placeholder="Message"></textarea>
-									</div>
-									<div class="col-12">
-										<ul class="actions">
-											<li><input type="submit" value="Send Message" /></li>
-											<li><input type="reset" value="Clear Form" class="alt" /></li>
-										</ul>
-									</div>
-								</div>
-							</form>
+							
 						</div>
 						<div class="col-12">
 							<hr />
-							<h3>Find me on ...</h3>
+							<h3>Find me on: </h3>
 							<ul class="social">
-								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-								<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon brands fa-tumblr"><span class="label">Tumblr</span></a></li>
-								<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>
-								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<!--
-								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
-								<li><a href="#" class="icon brands fa-instagram"><span>Instagram</span></a></li>
-								<li><a href="#" class="icon brands fa-foursquare"><span>Foursquare</span></a></li>
-								<li><a href="#" class="icon brands fa-skype"><span>Skype</span></a></li>
-								<li><a href="#" class="icon brands fa-soundcloud"><span>Soundcloud</span></a></li>
-								<li><a href="#" class="icon brands fa-youtube"><span>YouTube</span></a></li>
-								<li><a href="#" class="icon brands fa-blogger"><span>Blogger</span></a></li>
-								<li><a href="#" class="icon brands fa-flickr"><span>Flickr</span></a></li>
-								<li><a href="#" class="icon brands fa-vimeo"><span>Vimeo</span></a></li>
-								-->
+								<li><a href="https://www.linkedin.com/in/hamdi-benali/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://www.github.com/hamdi-benali/" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								
 							</ul>
 							<hr />
 						</div>
 					</div>
 					<footer>
 						<ul id="copyright">
-							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>Designed & Developed by<a href="http://html5up.net">Hamdi</a></li>
 						</ul>
 					</footer>
 				</div>
