--- a/index.html
+++ b/index.html
@@ -217,11 +217,11 @@
 								</div>
 							<footer class="major">
 								<ul class="actions special">
-									<li><a download="" href="assets\PDF\cv_hamdi_benali_fr_eng.pdf" class="button primary">
+									<li><a download="" href="assets\PDF\CV_2024-10-21_Hamdi_Benali.pdf" class="button primary">
 										Download CV (English) <i class="uil uil-download-alt button__icon"></i>
 									</a></li>
 									<li>
-									<a download="" href="assets\PDF\cv_hamdi_benali_fr_eng.pdf" class="button">
+									<a download="" href="assets\PDF\CV_2024-10-21_Hamdi_Benali.pdf" class="button">
 										Download CV (French) <i class="uil uil-download-alt button__icon"></i>
 									</a></li>
 								</ul>
